tidy up classes; add getNext24HoursFlights endpoint; update junit dependency;