@@ -1,32 +1,27 @@
 package console;
 
-import dto.BookingDTO;
+import dto.BookingDto;
 import dto.FlightDto;
 
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Scanner;
 
 public class BookingAndFlight {
     public static Scanner scanner = new Scanner(System.in);
-    public static ArrayList<BookingDTO> bookings = new ArrayList<>();
-    public static ArrayList<FlightDto> flights = new ArrayList<>();
 
 
-    public static List<BookingDTO> createBooking() {
-        BookingDTO bookingDTO = new BookingDTO();
+
+
+    public static BookingDto createBooking() {
+        BookingDto bookingDTO = new BookingDto();
         System.out.println("Enter flightID :");
         bookingDTO.setFlightId(scanner.nextInt());
-        System.out.println("Enter name :");
+        System.out.println("Enter name and surname :");
         String a=scanner.next();
-        System.out.println("Enter Surname :");
-        String b=scanner.next();
-        bookingDTO.setPassengerNames(Arrays.asList(a, b));
-        bookings.add(bookingDTO);
-        return bookings;
+        bookingDTO.setPassengerNames(List.of(a));
+        return bookingDTO;
     }
 
     public static FlightDto createFlight() {
